// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonBanner /> should render with props 1`] = `
<div
  className="mfui-button-banner mfui-button-banner_image mfui-button-banner_scaling_contain className rootClass"
  data-test="value"
>
  <Grid
    guttersLeft="medium"
  >
    <GridColumn
      all="6"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      mobile="12"
    >
      <div
        className="mfui-button-banner__content"
      >
        <Header
          as="h2"
          className="mfui-button-banner__header"
          color="default"
          hAlign="inherit"
        >
          Заголовок
        </Header>
        <div
          className="mfui-button-banner__text"
        >
          Текст
        </div>
        <Button
          className="mfui-button-banner__button buttonClass"
          download={true}
          href="#"
          target="_blank"
          theme="purple"
        >
          Кнопка
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="5"
      mobile="12"
    >
      <div
        className="mfui-button-banner__media"
        style={
          Object {
            "backgroundImage": "url(image.png)",
          }
        }
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`<ButtonBanner /> should render with required props 1`] = `
<div
  className="mfui-button-banner mfui-button-banner_scaling_cover"
>
  <Grid
    guttersLeft="medium"
  >
    <GridColumn
      all="6"
      leftOffsetDesktop="1"
      leftOffsetTablet="1"
      leftOffsetWide="1"
      mobile="12"
    >
      <div
        className="mfui-button-banner__content"
      >
        <Header
          as="h2"
          className="mfui-button-banner__header"
          color="default"
          hAlign="inherit"
        >
          Заголовок
        </Header>
        <div
          className="mfui-button-banner__text"
        >
          Текст
        </div>
      </div>
    </GridColumn>
    <GridColumn
      all="5"
      mobile="12"
    >
      <div
        className="mfui-button-banner__media"
      >
        <Button
          className="mfui-button-banner__button"
          target="_self"
          theme="green"
        >
          Кнопка
        </Button>
      </div>
    </GridColumn>
  </Grid>
</div>
`;
